# compass

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  glossary.md  philosophy.md
.codex-plugin/: plugin.json
.github/: chatgpt-connector-test.md
carried/: README.md
claude/: CLAUDE.md
codex/: AGENTS.md  config.review.toml  hooks.json  keybindings.json
codex/skills/which-llm/: SKILL.md  compare.py  enrich.py  export.py  frontier.py  pareto_chart.py  pick.py  plot_pareto.py  profile.py  pyproject.toml  query.py  resolve.py  scrape.py  slug.py  which_llm_core.py
codex/skills/which-llm/agents/: openai.yaml
codex/skills/which-llm/artifacts/: models_enriched.csv  unmatched.txt
local-docs/: 2026-07-17-compass-revision.md  README.md  agent-retrieval-audit.md  agent-topology-experiment.md  benchmark-run-evidence.md  benchmark-run-learnings.md  benchmark-thread-019f2412-learnings.md  benchmark-thread-019f2412-references.md  carried-capabilities-design.md  codex-context-compaction-setups.md  compaction-simulator.md  compass-orientation-audit.md  compass-review-state.md  compass-surface-inventory.md  context-economy.md  creation-writing-skills-audit.md  domain-shaped-skills-audit.md  gpt-5-6-routing-study.md  hook-surfaces-audit.md  loop-governance-skills-audit.md  maintainer-workflows-audit.md  maintenance-learnings.md  mechanical-truth-audit.md  model-calibration.md  pr-integration-test.md  pr-review-surfaces-audit.md  prompt-stats.md  rigor-skill-origin.md  session-trace-schema.md  (+3 more)
(+339 files in other folders)
