[project]
name = "which-llm"
version = "0.4.0"
description = "Agent skill: query current LLM intelligence, cost, capabilities, and OpenRouter slugs (incl. free tier) from Artificial Analysis."
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.9",
]
test = [
    "pytest>=9.0.3",
]

[tool.setuptools]
py-modules = [
    "compare",
    "enrich",
    "export",
    "frontier",
    "pick",
    "plot_pareto",
    "profile",
    "query",
    "pareto_chart",
    "resolve",
    "scrape",
    "slug",
    "which_llm_core",
]
